# Mantis-Notion

./: .gitignore  README.md  example.yaml  main.py  pyproject.toml
src/: datastore.py  logger.py  mantis.py  notion.py
src/mantis/: mantis.py  models.py
