[tool.poetry]
name = "mantis-notion"
version = "0.1.0"
description = ""
authors = ["gagip <y02645@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0.2"
requests = "^2.32.3"
notion-client = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
